feat: reconstruct with template method of Design Patterns